<resources>
    <!--     App Detail -->
    <string name="app_name">Arapp</string>
    <string name="app_name_persian">آراپ</string>
    <string name="app_version">نسخه آلفا 0.6.0</string>
    <string name="update">تغییرات نسخه 0.6.0: \n1- طراحی و بازسازی صفحه اول برنامه \n2- طراحی و تکمیل صفحات احراز هویت \n3- طراحی منوی زیر برای صفحه اصلی</string>
    <string name="about">آراپ، انتخاب همه سلیقه ها</string>
    <string name="privacy_text">کاربر گرامی لطفاً موارد زیر را جهت استفاده بهینه از خدمات و برنامه‌‏های کاربردی آراپ به دقت ملاحظه فرمایید. \nورود کاربران به وب‏‌سایت و برنامه آراپ هنگام استفاده از پروفایل شخصی، طرح‏‌های تشویقی، و سایر خدمات ارائه شده توسط آراپ به معنای آگاه بودن و پذیرفتن شرایط و قوانین و همچنین نحوه استفاده از سرویس‌‏ها و خدمات آراپ است. \nلازم به ذکر است شرایط و قوانین مندرج، جایگزین کلیه توافق‏‌های قبلی محسوب می‏‌شود.</string>
    <!--     Splash Screen -->
    <string name="no_connection">عدم اتصال به اینترنت!</string>
    <string name="try_again">تلاش مجدد</string>
    <!--     RegLog Fragment -->
    <string name="sign_up">عضویت</string>
    <string name="login_arapp">ورود به آراپ</string>
    <!--     Register Fragments -->
    <string name="register">عضویت در آراپ</string>
    <string name="register_title">جهت عضویت، شماره موبایل خود را وارد نمایید</string>
    <string name="login_sign_up">آیا در آراپ عضویت دارید؟</string>
    <string name="submit_continue">تایید و ادامه</string>
    <string name="verification_code">کد تایید</string>
    <string name="verification_code_text">رمز یکبار مصرف، به شماره وارد شده ارسال شد</string>
    <string name="timer_count">01:59</string>
    <string name="verification_code_retry">ارسال مجدد کد فعالسازی</string>
    <string name="edit_phone_number">اصلاح شماره موبایل</string>
    <string name="register_text">جهت تکمیل عضویت خود، اطلاعات زیر را وارد نمایید</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="mail">ایمیل</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="placeholder_phone">09*********</string>
    <string name="password">رمز عبور</string>
    <string name="confirm_password">تکرار رمز عبور</string>
    <string name="set_service">سرویس دهنده</string>
    <string name="get_service">سرویس گیرنده</string>
    <string name="law">قوانین آراپ</string>
    <string name="accept_law">را مطالعه کرده و می پذیرم.</string>
    <!--     Login Fragment -->
    <string name="login_text">جهت ورود، شماره موبایل و رمز عبور را وارد نمایید</string>
    <string name="sign_up_login">هنوز در آراپ عضویت ندارید؟</string>
    <string name="forget_password_text">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="forget_pass">بازیابی رمز عبور</string>
    <string name="login">ورود</string>
    <!--     Forget Password Fragments -->
    <string name="forget_pass_text">جهت بازیابی رمز عبور، شماره موبایل خود را وارد نمایید</string>
    <string name="forget_pass_new_pass">رمز عبور جدید خود را وارد نمایید</string>
    <!--    Bottom navigation-->
    <string name="home_page">صفحه اصلی</string>
    <string name="category">دسته بندی</string>
    <string name="notification">اعلانات</string>
    <string name="profile">صفحه کاربری</string>
    <!--    Drawer navigation-->
    <string name="favorite">نشان شده ها</string>
    <string name="notify_receives">دریافت اعلانات</string>
    <string name="share">به اشتراک گذاشتن</string>
    <string name="invite_friends">پیشنهاد به دوستان</string>
    <string name="rate_arapp">امتیاز به آراپ</string>
    <string name="help_us">سوالات متداول</string>
    <string name="contact_us">ارتباط با آراپ</string>
    <string name="about_us">درباره آراپ</string>
    <string name="recently_changed">تغییرات اخیر</string>
    <!--    Dialogs Text-->
    <string name="no_change">تغییرات جدیدی اعمال نشده است</string>
    <string name="contact_report">ارتباط با ما و گزارش مشکلات</string>
    <string name="contact_us_text">جهت ارتباط با آراپ و ارائه انتقادات و پیشنهادات خود می توانید از طریق شماره و یا ایمیل زیر تماس حاصل فرمایید \nهمچنین جهت ارسال مشکلات احتمالی با ایمیل آراپ در ارتباط باشید</string>
    <string name="call_us">تماس تلفنی با آراپ</string>
    <string name="mail_us">ایمیل به آراپ</string>
    <!--    Bottom Sheet Text-->
    <string name="understand">متوجه شدم</string>
    <!--    Home Fragment-->
    <string name="search_hint">جستجو در آراپ</string>
    <string name="arapp_coin_count">10</string>
    <!--    Profile Fragment-->
    <string name="edit_user">ویرایش اطلاعات کاربری</string>
    <string name="edit_user_text">در این قسمت می توانید اطلاعات کاربری خود را ویرایش کنید</string>
    <string name="submit_info">ثبت اطلاعات</string>
    <string name="bio">درباره من</string>
    <string name="province_city">استان/شهر</string>
    <string name="education">تحصیلات</string>
    <string name="province">استان</string>
    <string name="city">شهرستان</string>
    <string name="type_of_service">نوع کاربری</string>
    <string name="last_profile_update">آخرین بروزرسانی در:</string>
    <string name="add_service">افزودن سرویس</string>
    <string name="add_service_text">جهت افزودن سرویس جدید، اطلاعات زیر را تکمیل نمایید</string>
    <string name="name_service">عنوان سرویس</string>
    <string name="helper_text">این بخش، بعدا قابل ویرایش نخواهد بود</string>
    <string name="subtitle_service">مختصری از سرویس</string>
    <string name="text_service">توضیحات سرویس</string>
    <string name="address_service">نشانی</string>
    <string name="submit_location">ثبت موقعیت مکانی</string>
    <string name="time_activity">زمان آغاز و پایان فعالیت (به صورت روزانه)</string>
    <string name="opening_year">سال افتتاح سرویس</string>
    <string name="set_time">تنظیم زمان</string>
    <string name="edit_service">ویرایش سرویس</string>
    <string name="change_location">تغییر موقعیت مکانی روی نقشه</string>
    <string name="birthday">تاریخ تولد</string>
    <string name="set_birthday">تنظیم کنید</string>
    <string name="my_service">سرویس های من</string>
    <string name="rate_count">5.0</string>
    <string name="delete_service">آیا از حذف سرویس اطمینان دارید؟</string>
    <string name="delete_service_notify">در صورت تایید، امکان بازیابی وجود ندارد</string>
    <string name="delete">حذف</string>
    <string name="cancel">انصراف</string>
    <string name="setting">تنظیمات</string>
    <string name="public_setting">عمومی</string>
    <string name="language">زبان (Language)</string>
    <string name="persian">فارسی</string>
    <string name="english">انگلیسی</string>
    <string name="night_mode">حالت تاریک</string>
    <string name="clear_history">پاک کردن حافظه جستجو</string>
    <string name="show_arapp_in_setting">مشاهده آراپ در تنظیمات سیستم</string>
    <string name="security">امنیتی</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="check_update">بررسی بروز بودن آراپ</string>
    <string name="other">سایر</string>
    <string name="application_law">شرایط استفاده از خدمات</string>
    <string name="privacy">حریم خصوصی</string>
    <string name="delete_account">حذف حساب کاربری</string>
    <string name="delete_account_text">در صورت حذف، حساب کاربری شما قابل بازیابی نمی باشد</string>
    <string name="support">پشتیبانی</string>
    <string name="two_step_verification">احراز هویت دو مرحله ای</string>
    <string name="fingerprint">ورود به برنامه با اثر انگشت</string>
    <string name="active">فعال</string>
    <string name="deactivate">غیرفعال</string>
    <string name="email">ایمیل</string>
    <!--     Education Spinner List -->
    <string-array name="education_list">
        <item>تحصیلات خود را انتخاب نمایید</item>
        <item>دیپلم و فوق دیپلم</item>
        <item>کارشناسی</item>
        <item>کارشناسی ارشد</item>
        <item>دکتری و بالاتر</item>
    </string-array>
    <!--     Province Spinner List-->
    <string-array name="province_list">
        <item>انتخاب استان</item>
        <item>تهران</item>
        <item>گیلان</item>
    </string-array>
    <!--     City Spinner List -->
    <string-array name="city_list_tehran">
        <item>انتخاب شهرستان</item>
        <item>تهران</item>
        <item>شهریار</item>
        <item>اسلامشهر</item>
        <item>بهارستان</item>
        <item>ملارد</item>
        <item>پاکدشت</item>
        <item>ری</item>
        <item>قدس</item>
        <item>رباط کریم</item>
        <item>ورامین</item>
        <item>قرچک</item>
        <item>پردیس</item>
        <item>دماوند</item>
        <item>فیروزکوه</item>
    </string-array>
    <string-array name="city_list_gilan">
        <item>انتخاب شهرستان</item>
        <item>رشت</item>
        <item>تالش</item>
        <item>لاهیجان</item>
        <item>رودسر</item>
        <item>لنگرود</item>
        <item>بندرانزلی</item>
        <item>صومعه سرا</item>
        <item>آستانه اشرفیه</item>
        <item>رودبار</item>
        <item>فومن</item>
        <item>آستارا</item>
        <item>رضوانشهر</item>
        <item>شفت</item>
        <item>ماسال</item>
        <item>سیاهکل</item>
        <item>املش</item>
    </string-array>
    <!--     Category Spinner List -->
    <string-array name="category_list">
        <item>دسته بندی سرویس را انتخاب نمایید</item>
        <item>رستوران</item>
        <item>فست فود</item>
        <item>کافه</item>
        <item>هتل</item>
        <item>مسافرخانه</item>
        <item>مراکز خرید</item>
    </string-array>
    <!--     Opening year Spinner List -->
    <string-array name="year_list">
        <item>سال افتتاح سرویس را ثبت کنید</item>
        <item>1400</item>
        <item>1399</item>
        <item>1398</item>
        <item>1397</item>
        <item>1396</item>
        <item>1395</item>
        <item>1394</item>
        <item>1393</item>
        <item>1392</item>
        <item>1391</item>
        <item>1390</item>
        <item>1389</item>
        <item>1388</item>
        <item>1387</item>
        <item>1386</item>
        <item>1385</item>
        <item>1384</item>
        <item>1383</item>
        <item>1382</item>
        <item>1381</item>
        <item>1380</item>
        <item>1379</item>
        <item>1378</item>
        <item>1377</item>
        <item>1376</item>
        <item>1375</item>
        <item>1374</item>
        <item>1373</item>
        <item>1372</item>
        <item>13971</item>
        <item>1370</item>
        <item>1369</item>
        <item>1368</item>
        <item>1367</item>
        <item>1366</item>
        <item>1365</item>
        <item>1364</item>
        <item>1363</item>
        <item>1362</item>
        <item>1361</item>
        <item>1360</item>
        <item>1359</item>
        <item>1358</item>
        <item>1357</item>
        <item>1356</item>
        <item>1355</item>
        <item>1354</item>
        <item>1353</item>
        <item>1352</item>
        <item>1351</item>
        <item>1350</item>
        <item>1349</item>
        <item>1348</item>
        <item>1347</item>
        <item>1346</item>
        <item>1345</item>
        <item>1344</item>
        <item>1343</item>
        <item>1342</item>
        <item>1341</item>
        <item>1340</item>
        <item>1339</item>
        <item>1338</item>
        <item>1337</item>
        <item>1336</item>
        <item>1335</item>
        <item>1334</item>
        <item>1333</item>
    </string-array>
</resources>