<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="ir.arapp.arappmain.View.Fragments.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_categoryFragment"
            app:destination="@id/categoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoryFragment"
        android:name="ir.arapp.arappmain.View.Fragments.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_categoryFragment_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/notificationFragment"
        android:name="ir.arapp.arappmain.View.Fragments.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_notificationFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="ir.arapp.arappmain.View.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="ir.arapp.arappmain.View.Fragments.SearchFragment"
        android:label="@string/search_hint"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>