<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/dialogColor">
        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/app_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:fontFamily="@font/iransans_bold"
                android:text="@string/contact_report"
                android:textColor="@color/colorAccentDark"
                android:textSize="14sp"/>
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_fileName="contact.json"/>
            <TextView
                android:id="@+id/recentlyChangesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="textStart"
                android:fontFamily="@font/iransans_bold"
                android:text="@string/contact_us_text"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:scrollbars="vertical"
                android:maxLines="12"/>
<!--            Contact panel-->
            <com.marozzi.roundbutton.RoundButton
                android:id="@+id/call"
                style="@style/ButtonLoadingTransparent"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/call_us"
                android:gravity="center"
                android:layout_gravity="center"/>
            <com.marozzi.roundbutton.RoundButton
                android:id="@+id/mail"
                style="@style/ButtonLoadingTransparent"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/mail_us"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>