<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    app:behavior_peekHeight="45dp"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:fontFamily="@font/iransans_bold"
        android:text="@string/law"
        android:textColor="@color/colorAccentDark"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/privacy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:fontFamily="@font/iransans_bold"
        android:text="@string/privacy"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        android:maxLines="9"
        android:scrollbars="vertical"/>
    <com.marozzi.roundbutton.RoundButton
        android:id="@+id/closeBottomSheet"
        style="@style/ButtonLoadingTransparent"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/understand"
        android:gravity="center"
        android:layout_gravity="center"/>

</LinearLayout>