<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragments.ForgetPassValidateFragment">

<!--    view model-->
    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:background="@color/lightBack"
        android:layoutDirection="rtl">

<!--         Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/forgetPassToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.MyFancyTheme"
            android:background="@drawable/toolbar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightBack"
                    android:text="@string/forget_pass"
                    android:textSize="18sp"
                    android:fontFamily="@font/iransans"/>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
<!--         Verification Code panel -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/verification_code"
                android:textSize="16sp"
                android:fontFamily="@font/iransans_bold"
                android:textColor="@color/colorAccentDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/verification_code_text"
                android:textSize="15sp"
                android:fontFamily="@font/iransans"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/timerValidationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_count"
                android:textSize="16sp"
                android:fontFamily="@font/iransans_bold"
                android:textColor="@color/colorAccentDark"/>
            <com.chaos.view.PinView
                android:id="@+id/otpForgetPass"
                style="@style/ValidationCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:viewType="rectangle"
                android:inputType="number"/>
            <com.marozzi.roundbutton.RoundButton
                android:id="@+id/forgetPassButton"
                style="@style/ButtonDisableLoading"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:enabled="true"
                android:text="@string/submit_continue"/>
            <TextView
                android:id="@+id/changePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/edit_phone_number"
                android:textSize="15sp"
                android:fontFamily="@font/iransans_bold"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

    </RelativeLayout>

</layout>